# test-os

./: .gitignore  Cargo.toml  x86_64-triple.json
.cargo/: config.toml
delf/: Cargo.toml
delf/samples/src/: abs-pie.asm  bss.asm  bss3.asm  compile.sh  dl.asm  entry-point.c  hello-nolibc.c  ifunc-nolibc.c  msg.asm  nodata.asm  nolibc.c  puts.c  rel-pie.asm
delf/src/: errors.rs  lib.rs  parse.rs  process.rs
delf/src/components/: dynamic.rs  rela.rs  section.rs  segment.rs  strtab.rs  sym.rs
kernel/: Cargo.toml
kernel/src/: gdt.rs  interrupts.rs  lib.rs  main.rs
kernel/src/arch/x86_64/: memory.rs
kernel/src/delf/: errors.rs  mod.rs  parse.rs  process.rs
kernel/src/delf/components/: dynamic.rs  mod.rs  rela.rs  section.rs  segment.rs  strtab.rs  sym.rs
kernel/src/memory/: mod.rs
kernel/tests/: heap_alloc.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/arch/x86_64/: memory.rs
src/memory/: mod.rs
tests/: basic_boot.rs  heap_alloc.rs  stack_overflow.rs
types/: Cargo.toml
types/src/: lib.rs
