[package]
name = "rpi-os"
version = "0.1.0"
authors = ["esposm03 <36164633+esposm03@users.noreply.github.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33

[dependencies]
bootloader = "0.9.12"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.1"
uart_16550 = "0.2.12"
volatile = "0.2.6"
x86_64 = "0.13.2"
