[package]
name = "delf"
version = "0.1.0"
authors = ["esposm03 <36164633+esposm03@users.noreply.github.com>"]
edition = "2018"

[dependencies]
derive-try-from-primitive = "1.0.0"
derive_more = "0.99.11"
enumflags2 = "0.7.1"
displaydoc = { version = "0.2", default-features = false }
nom = { version = "5.0", default-features = false, features = ["alloc"] }
custom_debug_derive = "0.5"

types = { path = "../types" }
