[package]
name = "kernel"
version = "0.1.0"
authors = ["esposm03 <36164633+esposm03@users.noreply.github.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
test-success-exit-code = 33
run-args = ["-serial", "stdio"]

[dependencies]
bootloader = { version="0.9.12", features=["map_physical_memory"] }
lazy_static = { version="1.4.0", features=["spin_no_std"] }
linked_list_allocator = "0.9"
pc-keyboard = "0.5.1"
pic8259 = "0.10.0"
spin = "0.7.1"
uart_16550 = "0.2.12"
volatile = "0.2.6"
x86_64 = "0.14"
derive-try-from-primitive = "1.0.0"
derive_more = "0.99.11"
enumflags2 = "0.7.1"
displaydoc = { version="0.2", default-features=false }
nom = { version="5.0", default-features=false, features=["alloc"] }
custom_debug_derive = "0.5"

types = { path="../types" }

[[test]]
name = "basic_boot"
harness = false

[[test]]
name = "stack_overflow"
harness = false
